updating section names and intro
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/SoftwareDocumentation/02.md
+++ b/courses/SoftwareDocumentation/02.md
@@ -1,9 +1,9 @@
 ---
 index: 2
-title: 2. AUR+C Off Mode
+title: 2. Background
 author: Emily
 headerDepth: 3
 ---
 
-## 2. Off Mode
+## 2. Who Uses Software Documentation?
 
