--- a/courses/SoftwareDocumentation/03.md
+++ b/courses/SoftwareDocumentation/03.md
@@ -1,8 +1,8 @@
 ---
 index: 3
-title: 3. Power On
+title: 3. Completeness
 author: Emily
 headerDepth: 3
 ---
 
-## 3. Power On Mode
+## 3. Completeness
