--- a/courses/SoftwareDocumentation/04.md
+++ b/courses/SoftwareDocumentation/04.md
@@ -1,8 +1,8 @@
 ---
 index: 4
-title: 4. Initialization
+title: 4. Brevity
 author: Emily
 headerDepth: 3
 ---
 
-## 4. Initialization Mode
+## 4. Brevity
