--- a/courses/SoftwareDocumentation/06.md
+++ b/courses/SoftwareDocumentation/06.md
@@ -1,8 +1,8 @@
 ---
 index: 6
-title: 6. Launch
+title: 6. Communication
 author: Emily
 headerDepth: 3
 ---
 
-## 6. Launch Mode
+## 6. Communication
