--- a/courses/SoftwareDocumentation/08.md
+++ b/courses/SoftwareDocumentation/08.md
@@ -1,12 +1,8 @@
 ---
 index: 8
-title: 8. Post Launch
+title: 8. What's Next?
 author: Emily
 headerDepth: 3
 ---
 
-## 8. Post Launch Mode
-
-| Msg | Data | Timing |
-| --- | --- | --- |
-| msg | stuff | 0.1 |
+## 8. What's Next?
