--- a/resources/02.md
+++ b/resources/02.md
@@ -1,23 +1,42 @@
 ---
 index: 2
 icon: page
-title: Codespaces Resources
+title: References and Citations
 author: Emily Rodriguez
 headerDepth: 3
 ---
 
-## Using Codespaces on GitHub for the Development Lab
+## Academic Resources and Citations
 
-::: details 1. My Codespace is stopped! What do I do?
-This is normal. Your codespace will timeout after some period of inactivity. When you restart, it will be in the same state as you left it. Just click the "Restart codespace" button.
-![Alt text](../assets/img/Codespace_Stopped.png)
-:::
-
-::: details 2. How long can I use Codespaces for free?
-Go to the "Codespaces" tab on the top menu of your GitHub page while logged into GitHub to see your list Codespaces. Here you will see all the Codespaces you have, who owns them (for example, you may own it or your organization may own it). For personally owned Codespaces, you receive 120 free core hours per month. This means that you can have one 2-core Codepace active for 60 hours in one month.
-Reference [GitHub's documentation](https://docs.github.com/en/billing/managing-billing-for-github-codespaces/about-billing-for-github-codespaces) for more information.
-:::
-
-::: details 3. How do I get back to my Codespaces?
-This site's hompage has a link to "Go to the development lab". [Here](https://github.com/mitre/saf-training-lab-environment) is that link again. Read through the README on that page for up to date instructions regarding the Codespace development lab for these classes.
-:::
+1. Smith, T. M., McCartney, R., Gokhale, S. S., & Kaczmarczyk, L. C. (2014,
+March). Selecting open source software projects to teach software
+engineering. In Proceedings of the 45th ACM technical symposium on
+Computer science education (pp. 397-402).
+2. Sumita, D., Luers, W. G., & Seaman, C. B. (2007). Understanding
+documentation value in software maintenance. In Proceedings of the 2007
+Symposium on Computer human interaction for the management of information
+technology. ACM.
+3. Steina, C. J., & Heijstek, W. (2011, October). Necessary and neglected?
+An empirical study of internal documentation in agile software
+development teams. In Proceedings of the 96th ACM international conference
+on Design of communication (pp. 159-166).
+4. Nurkkala, Tom & Brandle, Stefan. (2011). Software studio: Teaching
+professional software engineering. 10.1145/1953163.1953209.
+5. Hoffman, M. E., Anderson, P. V., & Gustafsson, M. (2014, March).
+Workplace scenarios to integrate communication skills and content: A
+case study. In Proceedings of the 45th ACM technical symposium on
+Computer science education (pp. 349-354).
+6. Lohman, M. C. (2009). A survey of factors influencing the engagement of
+information technology professionals in informal learning activities.
+Information Technology, Learning, and Performance Journal, 25(1), 43.
+7. SARSAR, F. (2012). Motivation and Online Adult Learners: How do we
+do that?. Anadolu Journal of Educational Sciences International, 2(1),
+42-49.
+8. Masland, L. C. (2021). Resilient pedagogy and self-determination:
+Unlocking student engagement in uncertain times.
+9. Niinimäki, K., Tanu, M., & Kohtala, C. (2017). Outside the “comfort
+zone”. Designing the unknown in a multidisciplinary seing. The Design
+Journal, 20(sup"), S4434-S4443.
+10. Lohman, M. C. (2005). A survey of factors influencing the engagement of
+two professional groups in informal workplace learning activities.
+Human Resource Development Quarterly, 16(4), 501-527.
