--- a/resources/03.md
+++ b/resources/03.md
@@ -8,9 +8,9 @@ headerDepth: 3
 
 # Training Development Docs
 
-Here you can find information for adding to the training courses that SAF offers.
+Here you can find information for adding to the training content.
 
-We use [this theme](https://theme-hope.vuejs.press/)
+The content uses [this theme](https://theme-hope.vuejs.press/)
 
 Run a local deployment to test some changes:
 
