--- a/courses/SoftwareDocumentation/07.md
+++ b/courses/SoftwareDocumentation/07.md
@@ -1,9 +1,9 @@
 ---
 index: 7
-title: 7. FS Boost Mode
+title: 7. The Big Picture
 author: Emily
 headerDepth: 3
 ---
 
-## 7. FS Boost Mode
+## 7. The Big Picture
 
