breaking out individual sections into classes
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/SoftwareDocumentation/02.md
+++ b/courses/SoftwareDocumentation/02.md
@@ -7,3 +7,9 @@ headerDepth: 3
 
 ## 2. Who Uses Software Documentation?
 
+Software documentation stakeholders can include:
+1. Developers (for example with internal documentation, development instructions, code comments, etc.)
+2. Users (for installation guides, user manuals, new release updates, etc.)
+3. Managers (for user documentation review, architecture diagrams, system descriptions, etc.)
+
+Each of these groups may require different needs and have varying technical skills and varying levels of of familiarity with the topic. Therefore, it is important to consider different backgrounds when writing effective software documentation.
