--- a/courses/SoftwareDocumentation/03.md
+++ b/courses/SoftwareDocumentation/03.md
@@ -1,8 +1,24 @@
 ---
 index: 3
-title: 3. Completeness
+title: 3. How to Write Effective Documentation
 author: Emily
 headerDepth: 3
 ---
 
-## 3. Completeness
+## 3. Measuring Effective Documentation
+
+Several case studies have remarked on the value and need for effective software
+documentation, including a study which clearly defined the aributes most
+useful in successful software engineering. Valued aspects of documentation from
+the participants were accuracy, simplicity, readability, completeness, brevity, and
+a need for a high-level view (Sumita et al., 2007)
+
+We will take these values and break them down in sections to learn more. Feel free to 
+learn from the sections in the order that works for you, and practice your skills at the 
+end of each section and at combine all skills for a final, cummulative practice.
+
+The sections are:
+- [Be Concise](../concise/README.md)
+- [Be Complete]((../complete/README.md))
+- [Be Accurate]((../accurate/README.md))
+- [Be Big Picture]((../big-picture/README.md))
