--- a/courses/concise/02.md
+++ b/courses/concise/02.md
@@ -1,40 +1,62 @@
 ---
 index: 2
-title: 2. Be Concise
+title: 2. Active Voice
 author: Emily
 headerDepth: 3
 ---
 
-## 4. Less is More
+## 2.1 Active vs. Passive Voice
 
-Often, when we eliminate words, the result is more powerful and understandable. Learn how to write concisely in this section.
-
-::: tip Practice as you learn. 
-Take a moment to gather an example writing sample, whether a README, code comment, email, or otherwise that you can use to gauge your current style and practice improving. If you have not written anything, consider using a piece of open source software documentation.
-What are different ways you could say the following statement?
-:::
-
-::: details The application programming language is written to be dynamically interpreted.
+Can you tell which statements use active voice and which statements use passive voice?
 
 ::: code-tabs#shell
 
-@tab Active
+@tab A
 
 ```sh
-tree my_nginx
-```
-@tab Expected Output - my_nginx folder structure
-```
-      my_nginx
-      ├── README.md
-      ├── controls
-      │   └── example.rb
-      └── inspec.yml
 
-      2 directories, 3 files
+```
+@tab B
+```sh
+Python is written to be a dynamically typed 
+language.
+```
+@tab C
+```sh
+The programming language is a dynamically 
+typed language.
 ```
 :::
 
+<!-- ::: -->
+
+::: details What we think
+
+Each of the statements have something that could be more concise. 
+- Statement A uses redundant words like "application" and "really". 
+- Statement B uses passive voice by saying "is written to be" instead of using active voice which is more direct and concise.
+- Statement C is a concise option, but could be made more concise by using the name of the programming language, such as: "Python is a dynamically typed language."
+
 :::
 
-### 4.1. 
+## 2.2 Start with the subject
+
+## 2.3 Choose active verbs
+
+::: note Present Perfect Tense
+
+In addition to active vs. passive voice, take inventory of your present perfect tense usage for more direct communication. When you find phrases with _have + past participle of verb_ in your writing, that is a sign that you may need more concise language.
+
+[British council](https://learnenglish.britishcouncil.org/grammar/english-grammar-reference/present-perfect) states that present perfect tense describes "something that started in the past and continues in the present." _Have + past particible of verb_ forms the present perfect tense. For example: 
+- I have been to that restaurant.
+- I have played saxophone for 15 years.
+
+When used in software documentation, consider replacing present perfect tense with past or present simple tense or choosing a more active verb to make the sentence more direct and understandable.
+
+For example:
+
+| Present Perfect | Better Option |
+| ---- | ---- |
+| This application has been developed to do X.  | This application does X. |
+
+:::
