adding weekly progress
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/03.md
+++ b/courses/concise/03.md
@@ -4,3 +4,44 @@ title: 3. Word Choice
 author: Emily
 headerDepth: 3
 ---
+
+## 1. Choose concise words
+
+Use the shortest form of the word. For example, use the word "use" instead of "utilize" or "concept" instead of "conception of". This helps to maintain direct, concise, and better understood language.
+
+::: tip Try it out
+Modify the sentences below to use the shorter form of a word when appropriate.
+:::
+
+::: details Sample word choices
+:::
+
+## 2. Choose meaningful words
+
+::: info A teacher once told a classroom that with the plethora of words that exist in the dictionary, there is no need to use the word "very." 
+:::
+
+When choosing words, use words with meaning. Reduce adjectives and adverbs to promote clear, formal writing. Note the difference here:
+
+| With Adverbs | Without Adverbs |
+| - | - |
+| The function **clearly** returns the sum of two numbers. | The function returns the sum of two numbers. |
+| Run the help command, then input the command line flags **carefully**. |  Run the help command, then input the command line flags. |
+
+| With Adjectives | Without Adjectives |
+| - | - |
+| The function  | No adjective use |
+
+## 3. Avoid pronouns
+
+
+
+
+## 4. Choose understandable words
+
+
+
+
+
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
