--- a/courses/concise/04.md
+++ b/courses/concise/04.md
@@ -4,3 +4,36 @@ title: 4. Keep It Short
 author: Emily
 headerDepth: 3
 ---
+
+## 1. Writing is hard
+
+::: info Which do you think is more difficult, writing new content, or editing existing content?
+:::
+
+::: details According to Frank Norris 
+**"I hate writing, but I love having written"**
+This is a famous quote attributed to various writers with Frank Norris as the possible originator.
+:::
+
+::: details According to Anne Lamott
+“Almost all good writing begins with terrible first efforts. You need to start somewhere. Start by getting something—anything—down on paper." - Anne Lamott
+:::
+
+Frank Norris shares the sentiment that writing can be a challenging, unenjoyable, but rewarding task. Anne Lamott teaches that to face that challenge, one must jump in, and be willing to get the first, probably poorly contructed, words on paper. 
+
+## 2. First, write something down
+
+This section encourages engineers to get their thoughts down, however messy, because for many, deleting words is easier than creating them. Start with a stream of conscienceness, bullet points, or any way that gets the ideas written down.
+
+::: tip Partner Up
+One strategy can be to speak your thoughts out loud while another person records your thoughts. If this is helpful, but you don't have a partner, you can try recording yourself and then writing it while you listen to allow for the thoughts to flow.
+:::
+
+## 3. Then, delete words
+
+Once the thoughts are there, remove redundancy and reword thoughts to keep the writing short, concise, and clear.
+
+## 4. Organize in chunks
+
+Review the writing to make sentences short and paragraphs short.
+
