Add some tidbits and giscus commenting
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/02.md
+++ b/courses/concise/02.md
@@ -60,3 +60,8 @@ For example:
 | This application has been developed to do X.  | This application does X. |
 
 :::
+
+
+::: tip Find another word!
+Use thesaurus.com or similar tools to identify synonyms that may make your word choice simpler, more concise, more understandable, or more intentional.
+:::
