reorder concise section 1 and add examples to the first part of the concise wording
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/SoftwareDocumentation/03.md
+++ b/courses/SoftwareDocumentation/03.md
@@ -5,7 +5,25 @@ author: Emily
 headerDepth: 3
 ---
 
-## 3. Measuring Effective Documentation
+## 1. Writing is hard
+
+::: info Which do you think is more difficult, writing new content, or editing existing content?
+:::
+
+::: details According to Frank Norris 
+**"I hate writing, but I love having written"**
+This is a famous quote attributed to various writers with Frank Norris as the possible originator.
+:::
+
+::: details According to Anne Lamott
+“Almost all good writing begins with terrible first efforts. You need to start somewhere. Start by getting something—anything—down on paper." - Anne Lamott
+:::
+
+Frank Norris shares the sentiment that writing can be a challenging, unenjoyable, but rewarding task. Anne Lamott teaches that to face that challenge, one must jump in, and be willing to get the first, probably poorly contructed, words on paper.
+
+**So, the first, and arguably the hardest step in writing is starting!** Jump in, get some thoughts written down, and feel free to make a bad first draft. Then, follow these sections to guide improvement to your writing so you can create effective software documentation.
+
+## 2. Measuring Effective Documentation
 
 Several case studies have remarked on the value and need for effective software
 documentation, including a study which clearly defined the aributes most
