--- a/courses/concise/03.md
+++ b/courses/concise/03.md
@@ -1,49 +1,67 @@
 ---
 index: 3
-title: 3. Word Choice
+title: 3. Active Voice
 author: Emily
 headerDepth: 3
 ---
 
-## 1. Choose concise words
+## 2.1 Active vs. Passive Voice
 
-Use the shortest form of the word. For example, use the word "use" instead of "utilize" or "concept" instead of "conception of". This helps to maintain direct, concise, and better understood language.
+Can you tell which statements use active voice and which statements use passive voice?
 
-::: tip Try it out
-Modify the sentences below to use the shorter form of a word when appropriate.
+::: code-tabs#shell
+
+@tab A
+
+```sh
+
+```
+@tab B
+```sh
+Python is written to be a dynamically typed 
+language.
+```
+@tab C
+```sh
+The programming language is a dynamically 
+typed language.
+```
 :::
 
-::: details Sample word choices
+<!-- ::: -->
+
+::: details What we think
+
+Each of the statements have something that could be more concise. 
+- Statement A uses redundant words like "application" and "really". 
+- Statement B uses passive voice by saying "is written to be" instead of using active voice which is more direct and concise.
+- Statement C is a concise option, but could be made more concise by using the name of the programming language, such as: "Python is a dynamically typed language."
+
 :::
 
-https://www.usu.edu/markdamen/writingguide/07repwrd.htm
+## 2.2 Start with the subject
 
-## 2. Choose meaningful words
+## 2.3 Choose active verbs
 
-::: info A teacher once told a classroom that with the plethora of words that exist in the dictionary, there is no need to use the word "very." 
+::: note Present Perfect Tense
+
+In addition to active vs. passive voice, take inventory of your present perfect tense usage for more direct communication. When you find phrases with _have + past participle of verb_ in your writing, that is a sign that you may need more concise language.
+
+[British council](https://learnenglish.britishcouncil.org/grammar/english-grammar-reference/present-perfect) states that present perfect tense describes "something that started in the past and continues in the present." _Have + past particible of verb_ forms the present perfect tense. For example: 
+- I have been to that restaurant.
+- I have played saxophone for 15 years.
+
+When used in software documentation, consider replacing present perfect tense with past or present simple tense or choosing a more active verb to make the sentence more direct and understandable.
+
+For example:
+
+| Present Perfect | Better Option |
+| ---- | ---- |
+| This application has been developed to do X.  | This application does X. |
+
 :::
 
-When choosing words, use words with meaning. Reduce adjectives and adverbs to promote clear, formal writing. Note the difference here:
 
-| With Adverbs | Without Adverbs |
-| - | - |
-| The function **clearly** returns the sum of two numbers. | The function returns the sum of two numbers. |
-| Run the help command, then input the command line flags **carefully**. |  Run the help command, then input the command line flags. |
-
-| With Adjectives | Without Adjectives |
-| - | - |
-| The function  | No adjective use |
-
-## 3. Avoid pronouns
-
-
-
-
-## 4. Choose understandable words
-
-
-
-
-
-
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+::: tip Find another word!
+Use thesaurus.com or similar tools to identify synonyms that may make your word choice simpler, more concise, more understandable, or more intentional.
+:::
