--- a/courses/concise/02.md
+++ b/courses/concise/02.md
@@ -1,67 +1,113 @@
 ---
 index: 2
-title: 2. Active Voice
+title: 2. Word Choice
 author: Emily
 headerDepth: 3
 ---
 
-## 2.1 Active vs. Passive Voice
+Words are the building blocks of writing. Chose them intentionally to keep readers engaged and understanding the content!
 
-Can you tell which statements use active voice and which statements use passive voice?
-
-::: code-tabs#shell
-
-@tab A
-
-```sh
-
-```
-@tab B
-```sh
-Python is written to be a dynamically typed 
-language.
-```
-@tab C
-```sh
-The programming language is a dynamically 
-typed language.
-```
+::: note Choosing words intentionally seems intimidating! Where do I start?
+Thinking about intentional word choice can seem intimidating. Remember the lesson from [the overview section](../SoftwareDocumentation/03.md) that the most important first step to writing is to get SOMETHING written down. The first draft can be messy, and then you can edit the existing ideas to chose intentional, concise, words and communicate most effectively.
 :::
 
-<!-- ::: -->
+## 1. Choose concise words
 
-::: details What we think
+Use the shortest form of the word. For example, use the word "use" instead of "utilize" or "concept" instead of "conception of". This helps to maintain direct, concise, and better understood language.
 
-Each of the statements have something that could be more concise. 
-- Statement A uses redundant words like "application" and "really". 
-- Statement B uses passive voice by saying "is written to be" instead of using active voice which is more direct and concise.
-- Statement C is a concise option, but could be made more concise by using the name of the programming language, such as: "Python is a dynamically typed language."
+### Sample word choices
 
+| Wordy Phrases | Example Sentence (Wordy) | Concise Alternatives | Example Sentence (Concise) |
+| --- | --- | --- | --- |
+| Accomplish | We need to accomplish this task by end of day. | Do | We need to do this task by end of day. |
+| Additional | We need additional resources for this project. | More | We need more resources for this project. |
+| Approximately | There are approximately 50 people in the team. | About | There are about 50 people in the team. |
+| Commence | Let's commence the meeting. | Start | Let's start the meeting. |
+| Consequently | Consequently, we decided to change our approach. | So | So, we decided to change our approach. |
+| Demonstrate | Can you demonstrate how to use this feature? | Show | Can you show me how to use this feature? |
+| Eliminate | We need to eliminate this issue soon. | End | We need to end this issue soon. |
+| Endeavor | Let's endeavor a different method. | Try | Let's try a different method. |
+| Finalize | We need to finalize this project by next week. | End or Finish | We need to finish this project by next week. |
+| Implement | We will implement the new process from next month. | Start | We will start the new process from next month. |
+| In order to | In order to solve this problem, we need to think differently. | To | To solve this problem, we need to think differently. |
+| Indicate | The data indicates a significant improvement. | Show | The data shows a significant improvement. |
+| Initiate | We need to initiate the discussion now. | Start | We need to start the discussion now. |
+| Methodology | This is the best methodology to solve this problem. | Method | This is the best method to solve this problem. |
+| Necessitate | We necessitate more time to finish this task. | Need | We need more time to finish this task. |
+| Obtain | Did you obtain the approval for this task? | Get | Did you get the approval for this task? |
+| Perform | We need to perform a system check. | Do | We need to do a system check. |
+| Prior to | Prior to lunch break, finish this task. | Before | Finish this task before lunch break. |
+| Proceed | Let's proceed with this plan. | Go | Let's go with this plan. |
+| Subsequent | We will discuss this in our subsequent meeting. | Next or Later | We will discuss this in our next meeting. |
+| Sufficient | We have sufficient resources for this project. | Enough | We have enough resources for this project. |
+| Terminate | We need to terminate this contract. | End | We need to end this contract. |
+| Therefore | Therefore, we need to rethink our strategy. | So | So, we need to rethink our strategy. |
+| Utilize | We can utilize this tool to automate the process. | Use | We can use this tool to automate the process. |
+| With the exception of | With the exception of John, everyone is present in the meeting. | Except | Everyone, except John, is present in the meeting. |
+
+::: tip Try it out
+Modify the sentences below to use the shorter form of a word when appropriate.
 :::
 
-## 2.2 Start with the subject
+### Wordy Sentence Examples
+1. In order to complete the project, we need to utilize all available resources.
+2. The team will commence the testing phase subsequent to the completion of the development phase.
+3. The methodology we're using necessitates careful planning and execution.
 
-## 2.3 Choose active verbs
-
-::: note Present Perfect Tense
-
-In addition to active vs. passive voice, take inventory of your present perfect tense usage for more direct communication. When you find phrases with _have + past participle of verb_ in your writing, that is a sign that you may need more concise language.
-
-[British council](https://learnenglish.britishcouncil.org/grammar/english-grammar-reference/present-perfect) states that present perfect tense describes "something that started in the past and continues in the present." _Have + past particible of verb_ forms the present perfect tense. For example: 
-- I have been to that restaurant.
-- I have played saxophone for 15 years.
-
-When used in software documentation, consider replacing present perfect tense with past or present simple tense or choosing a more active verb to make the sentence more direct and understandable.
-
-For example:
-
-| Present Perfect | Better Option |
-| ---- | ---- |
-| This application has been developed to do X.  | This application does X. |
-
+::: details
+| Wordy Sentences | Suggested Concise Sentences | Description of Change |
+| --- | --- | --- |
+| In order to complete the project, we need to utilize all available resources. | To complete the project, we need to use all available resources. | "In order to" is replaced with "To" and "utilize" is replaced with "use". These changes make the sentence more direct and easier to understand. |
+| The team will commence the testing phase subsequent to the completion of the development phase. | The team will start testing after finishing the development phase. | "Commence" is replaced with "start" and "subsequent to" is replaced with "after". These changes simplify the language and make the sentence more straightforward. |
+| The methodology we're using necessitates careful planning and execution. | The method we're using needs careful planning and execution. | "Methodology" is replaced with "method" and "necessitates" is replaced with "needs". These changes remove unnecessary complexity from the sentence, making it more concise and easier to read. |
 :::
 
-
-::: tip Find another word!
-Use thesaurus.com or similar tools to identify synonyms that may make your word choice simpler, more concise, more understandable, or more intentional.
+::: details Extra Examples 
+| Wordy Sentences | Suggested Concise Sentences |
+| --- | --- |
+| The software demonstrates an error when we attempt to accomplish the task. | The software shows an error when we try to do the task. |
+| Prior to the release, we need to perform a thorough check of all functionalities. | Before the release, we need to thoroughly check all functionalities. |
+| The results indicate a significant improvement in the system's performance. | The results show a significant improvement in the system's performance. |
+| Additional testing is required to eliminate potential bugs. | More testing is needed to end potential bugs. |
+| The project manager will finalize the schedule by the end of the week. | The project manager will finish the schedule by the end of the week. |
+| We need to obtain the client's approval before we can proceed with the changes. | We need to get the client's approval before we can go ahead with the changes. |
+| The team endeavored to implement the new feature, but faced several challenges. | The team tried to start the new feature, but faced several challenges. |
+| The new update will terminate all existing issues with the software. | The new update will end all existing issues with the software. |
+| Consequently, we decided to change our approach to the problem. | So, we decided to change our approach to the problem. |
+| With the exception of the lead developer, everyone is required to attend the meeting. | Except for the lead developer, everyone is required to attend the meeting. |
+| The data approximately matches our initial predictions. | The data about matches our initial predictions. |
+| We have sufficient resources to accomplish the task. | We have enough resources to do the task. |
+| Therefore, we need to rethink our strategy. | So, we need to rethink our strategy. |
 :::
+
+https://www.usu.edu/markdamen/writingguide/07repwrd.htm
+
+## 2. Choose meaningful words
+
+::: info A teacher once told a classroom that with the plethora of words that exist in the dictionary, there is no need to use the word "very." 
+:::
+
+When choosing words, use words with meaning. Reduce adjectives and adverbs to promote clear, formal writing. Note the difference here:
+
+| With Adverbs | Without Adverbs |
+| - | - |
+| The function **clearly** returns the sum of two numbers. | The function returns the sum of two numbers. |
+| Run the help command, then input the command line flags **carefully**. |  Run the help command, then input the command line flags. |
+
+| With Adjectives | Without Adjectives |
+| - | - |
+| The function  | No adjective use |
+
+## 3. Avoid pronouns
+
+
+
+
+## 4. Choose understandable words
+
+
+
+
+
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
