--- a/courses/concise/02.md
+++ b/courses/concise/02.md
@@ -17,6 +17,8 @@ Use the shortest form of the word. For example, use the word "use" instead of "u
 
 ### Sample word choices
 
+Below are sample words that can be written more concisely. When considering this list, understand that the "wordy phrases" can be appropriate word choices in many contexts, but practice simplifying the word choice for circumstances when doing so may make the content better understood by the reader.
+
 | Wordy Phrases | Example Sentence (Wordy) | Concise Alternatives | Example Sentence (Concise) |
 | --- | --- | --- | --- |
 | Accomplish | We need to accomplish this task by end of day. | Do | We need to do this task by end of day. |
