round out word choice section for be concise
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/02.md
+++ b/courses/concise/02.md
@@ -15,7 +15,7 @@ Thinking about intentional word choice can seem intimidating. Remember the lesso
 
 Use the shortest form of the word. For example, use the word "use" instead of "utilize" or "concept" instead of "conception of". This helps to maintain direct, concise, and better understood language.
 
-### Sample word choices
+### 1.1 Sample word choices
 
 Below are sample words that can be written more concisely. When considering this list, understand that the "wordy phrases" can be appropriate word choices in many contexts, but practice simplifying the word choice for circumstances when doing so may make the content better understood by the reader.
 
@@ -23,6 +23,16 @@ Below are sample words that can be written more concisely. When considering this
 | --- | --- | --- | --- |
 | Accomplish | We need to accomplish this task by end of day. | Do | We need to do this task by end of day. |
 | Additional | We need additional resources for this project. | More | We need more resources for this project. |
+| Implement | We will implement the new process from next month. | Start | We will start the new process from next month. |
+| In order to | In order to solve this problem, we need to think differently. | To | To solve this problem, we need to think differently. |
+| Methodology | This is the best methodology to solve this problem. | Method | This is the best method to solve this problem. |
+| Necessitate | We necessitate more time to finish this task. | Need | We need more time to finish this task. |
+| Utilize | We can utilize this tool to automate the process. | Use | We can use this tool to automate the process. |
+| With the exception of | With the exception of John, everyone is present in the meeting. | Except | Everyone, except John, is present in the meeting. |
+
+::: details More Word Choice Examples
+| Wordy Phrases | Example Sentence (Wordy) | Concise Alternatives | Example Sentence (Concise) |
+| --- | --- | --- | --- |
 | Approximately | There are approximately 50 people in the team. | About | There are about 50 people in the team. |
 | Commence | Let's commence the meeting. | Start | Let's start the meeting. |
 | Consequently | Consequently, we decided to change our approach. | So | So, we decided to change our approach. |
@@ -30,12 +40,8 @@ Below are sample words that can be written more concisely. When considering this
 | Eliminate | We need to eliminate this issue soon. | End | We need to end this issue soon. |
 | Endeavor | Let's endeavor a different method. | Try | Let's try a different method. |
 | Finalize | We need to finalize this project by next week. | End or Finish | We need to finish this project by next week. |
-| Implement | We will implement the new process from next month. | Start | We will start the new process from next month. |
-| In order to | In order to solve this problem, we need to think differently. | To | To solve this problem, we need to think differently. |
 | Indicate | The data indicates a significant improvement. | Show | The data shows a significant improvement. |
 | Initiate | We need to initiate the discussion now. | Start | We need to start the discussion now. |
-| Methodology | This is the best methodology to solve this problem. | Method | This is the best method to solve this problem. |
-| Necessitate | We necessitate more time to finish this task. | Need | We need more time to finish this task. |
 | Obtain | Did you obtain the approval for this task? | Get | Did you get the approval for this task? |
 | Perform | We need to perform a system check. | Do | We need to do a system check. |
 | Prior to | Prior to lunch break, finish this task. | Before | Finish this task before lunch break. |
@@ -44,24 +50,50 @@ Below are sample words that can be written more concisely. When considering this
 | Sufficient | We have sufficient resources for this project. | Enough | We have enough resources for this project. |
 | Terminate | We need to terminate this contract. | End | We need to end this contract. |
 | Therefore | Therefore, we need to rethink our strategy. | So | So, we need to rethink our strategy. |
-| Utilize | We can utilize this tool to automate the process. | Use | We can use this tool to automate the process. |
-| With the exception of | With the exception of John, everyone is present in the meeting. | Except | Everyone, except John, is present in the meeting. |
+:::
+
+### 1.2 Wordy Sentence Examples
 
 ::: tip Try it out
 Modify the sentences below to use the shorter form of a word when appropriate.
 :::
 
-### Wordy Sentence Examples
 1. In order to complete the project, we need to utilize all available resources.
 2. The team will commence the testing phase subsequent to the completion of the development phase.
 3. The methodology we're using necessitates careful planning and execution.
 
-::: details
-| Wordy Sentences | Suggested Concise Sentences | Description of Change |
+::: details How to improve the example 1
+| Wordy Sentence | Suggested Concise Sentence | Description of Change |
 | --- | --- | --- |
 | In order to complete the project, we need to utilize all available resources. | To complete the project, we need to use all available resources. | "In order to" is replaced with "To" and "utilize" is replaced with "use". These changes make the sentence more direct and easier to understand. |
+:::
+
+::: details How to improve the example 2
+| Wordy Sentence | Suggested Concise Sentence | Description of Change |
+| --- | --- | --- |
 | The team will commence the testing phase subsequent to the completion of the development phase. | The team will start testing after finishing the development phase. | "Commence" is replaced with "start" and "subsequent to" is replaced with "after". These changes simplify the language and make the sentence more straightforward. |
+:::
+
+::: details How to improve the example 3
+| Wordy Sentence | Suggested Concise Sentence | Description of Change |
+| --- | --- | --- |
 | The methodology we're using necessitates careful planning and execution. | The method we're using needs careful planning and execution. | "Methodology" is replaced with "method" and "necessitates" is replaced with "needs". These changes remove unnecessary complexity from the sentence, making it more concise and easier to read. |
+:::
+
+::: info Don't stop there! - Further improvement
+The options provided to simplify the example sentences are just one way to do so. You may have identified another option! For example, look at other ways we may simplify the example sentences.
+
+Example Sentence 1 - Another Option: 
+**Use all available resources to complete the project.**
+Reordering the sentence and removing the "we need" made this sentence more direct and concise.
+
+Example Sentence 2 - Another Option:
+**The team will begin testing after completing the development phase.**
+This additional example shows different word choices that are also concise.
+
+Example Sentence 3 - Another Option:
+**The (name) method requires careful planning and execution.**
+Instead of describing the method as "the method we're using", more concise language could state the name of the method. Additionally, this example shows another word choice - requires instead of needs.
 :::
 
 ::: details Extra Examples 
@@ -82,13 +114,16 @@ Modify the sentences below to use the shorter form of a word when appropriate.
 | Therefore, we need to rethink our strategy. | So, we need to rethink our strategy. |
 :::
 
-https://www.usu.edu/markdamen/writingguide/07repwrd.htm
+::: note Utah State University Writing Guidance
+If you want to read more, a [writing guide provided by Utah State University](https://www.usu.edu/markdamen/writingguide/07repwrd.htm) provides more details on word choice.
+:::
 
 ## 2. Choose meaningful words
 
 ::: info A teacher once told a classroom that with the plethora of words that exist in the dictionary, there is no need to use the word "very." 
 :::
 
+### 2.1 Sample Adjectives and Adverbs
 When choosing words, use words with meaning. Reduce adjectives and adverbs to promote clear, formal writing. Note the difference here:
 
 | With Adverbs | Without Adverbs |
@@ -98,18 +133,70 @@ When choosing words, use words with meaning. Reduce adjectives and adverbs to pr
 
 | With Adjectives | Without Adjectives |
 | - | - |
-| The function  | No adjective use |
+| The command line tool's **current** flags are `--help`, `--input` and `--output`.  | The command line tool's flags are `--help`, `--input` and `--output`. |
+| For **detailed** instructions on installing the software, click the link below. | For information on installing the software, click the link below. |
 
-## 3. Avoid pronouns
+::: danger Avoid Relative Time Phrases
+You may know when you wrote or published content, but you do not know when the reader is reading it. Therefore, using phrases like "currently", "now", "at the moment", "in the future", "last month", "next year", or "later" are arbitrary. Skip these words for more concise writing. If necessary, use absolute, rather than relative time stamps, for example, "in version 3.2", "before May 2023", or "in 2024".
+:::
 
+### 2.2 Removing Adjective and Adverb Examples
 
+::: tip Try it out
+Some adjectives add meaning to a sentence, while otherse may be unneeded. Modify the sentences below to use eliminate unnecessary adjectives and adverbs.
+:::
 
+1. The system is designed to efficiently handle a very large amount of data.
+2. The software is equipped with an exceptionally powerful search function.
+3. The software provides a truly comprehensive solution for all your business needs.
+4. The application runs significantly faster on the latest version of the operating system.
 
-## 4. Choose understandable words
+::: details How to improve the example 1
+| Original Sentence | Revised Sentence | Reason for Change |
+|-------------------|------------------|-------------------|
+| The system is designed to efficiently handle a very large amount of data. | The system is designed to handle large amounts of data. | Removed adverbs "efficiently" and "very" to make the sentence more concise. |
+:::
 
+::: details How to improve the example 2
+| Original Sentence | Revised Sentence | Reason for Change |
+|-------------------|------------------|-------------------|
+| The software is equipped with an exceptionally powerful search function. | The software is equipped with a powerful search function. | Removed the adjective "exceptionally" to make the sentence more direct. |
+:::
 
+::: details How to improve the example 3
+| Original Sentence | Revised Sentence | Reason for Change |
+|-------------------|------------------|-------------------|
+| The software provides a truly comprehensive solution for all your business needs. | The software provides a comprehensive solution for business needs. | Removed the adverb "truly" to make the sentence more clear and concise. |
+:::
 
+::: details How to improve the example 4
+| Original Sentence | Revised Sentence | Reason for Change |
+|-------------------|------------------|-------------------|
+| The application runs faster on the latest version of the operating system. | The application runs significantly faster on the latest version of the operating system. | In this case, the adverb "significantly" maybe valuable because it provides important information about the degree of improvement in speed. Also, "latest" is important to describe the release. |
+:::
 
+::: info Don't stop there! - Further improvement
+Even the example improvement can be improved! However, it is important to think of the purpose and audience of the writing when making these choices. Sometimes these may be more concise or direct ways of writing, but not appropriate, for example, to use in a marketing pitch where the purpose is to advertise to readers.
 
+Example Sentence 1 - Another Option: 
+**The system is designed to handle up to 1 GB of data.**
+This example replaces the subjective adjective "large" with an objective amount.
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+Example Sentence 2 - Another Option:
+**The software is equipped with a search function that can search 1 GB of data in less than 5 seconds.**
+This example is longer than the first, but provides real and concrete evidence rather than subjective measurements.
+
+Example Sentence 3 - Another Option:
+**The software provides a solution for all your business needs.**
+In addition to removing "truly", we can also remove "comprehensive".
+
+Example Sentence 4 - Another Option:
+**The application runs two times faster on version 3.X of the operating system.**
+Make this sentence better by using valuable adjectives and adverbs like "two times faster" and "version 3.X" rather than "significantly faster" and "latest version".
+:::
+
+## 3. Choose understandable words
+
+Consider your audience when selecting words. Avoid or define words that are specific, technical, or outside of the average reader's vocabulary. For guidance on defining words, reference [the "Be Complete" section](../complete/).
+
+Ask someone else to review your writing. If there are words the reader does not understand, use tools like thesaurus.com to identify synonyms that may make your word choice simpler, more concise, more understandable, or more intentional.
