--- a/courses/concise/05.md
+++ b/courses/concise/05.md
@@ -4,3 +4,5 @@ title: 5. Scope
 author: Emily
 headerDepth: 3
 ---
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
