remove unneeded isntallation files and add information on active vs. passive voice
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/03.md
+++ b/courses/concise/03.md
@@ -5,7 +5,7 @@ author: Emily
 headerDepth: 3
 ---
 
-## 2.1 Active vs. Passive Voice
+## 1 Active vs. Passive Voice
 
 Can you tell which statements use active voice and which statements use passive voice?
 
@@ -14,17 +14,19 @@ Can you tell which statements use active voice and which statements use passive 
 @tab A
 
 ```sh
-
+The software was updated by the developer.
 ```
 @tab B
 ```sh
-Python is written to be a dynamically typed 
-language.
+The data was analyzed using the latest machine learning algorithm.
 ```
 @tab C
 ```sh
-The programming language is a dynamically 
-typed language.
+The developer updated the software.
+```
+@tab D
+```sh
+The latest machine learning algorithm analyzed the data.
 ```
 :::
 
@@ -32,16 +34,38 @@ typed language.
 
 ::: details What we think
 
-Each of the statements have something that could be more concise. 
-- Statement A uses redundant words like "application" and "really". 
-- Statement B uses passive voice by saying "is written to be" instead of using active voice which is more direct and concise.
-- Statement C is a concise option, but could be made more concise by using the name of the programming language, such as: "Python is a dynamically typed language."
+Statement A and B use passive voice. Statement C and D uses active voice! Think about which sentences sound more direct and concise.
 
 :::
 
-## 2.2 Start with the subject
+## 2 How to Write in Active Voice
 
-## 2.3 Choose active verbs
+### 2.1 Identify the Subject and Verb 
+The subject of the sentence should be the one performing the action (verb). If the subject is the receiver of the action, the sentence is likely in passive voice. 
+
+### 2.2 Use Direct Language
+Active voice uses direct language, which can make your writing clearer and more concise. Instead of saying `The function was implemented by the programmer,` say `The programmer implemented the function.`
+
+### 2.3 Rephrase Sentences
+If you find you've written a sentence in the passive voice, try to rephrase it. For example, `The code was reviewed by the team` can be rephrased to `The team reviewed the code.`
+
+### 2.4 Avoid "by" Phrases
+Passive voice often includes phrases that start with `by.` If you see this in your writing, it might be a sign that you're using passive voice.
+
+In the example: `The server was rebooted by the system administrator.`, the sentence is written in passive voice and could be rewritten to `The system administrator rebooted the server.`
+
+### 2.5 Use Active Voice in Software Instructions
+When writing instructions or procedures, use the active voice to directly address the reader. For example, instead of writing `The file should be saved,` write `Save the file.`
+
+### 2.6 Use a Passive Voice Checker
+There are online tools and features in word processing software that can help identify passive voice in your writing. Use these tools to help you spot and correct passive sentences.
+
+::: info Should I always use active voice?
+Remember, while it's generally recommended to use active voice in technical writing, there are instances where passive voice may be necessary or even preferred, such as when the focus is on the action being done rather than who is doing it.
+:::
+
+
+## 3 Choose active verbs
 
 ::: note Present Perfect Tense
 
