--- a/courses/concise/05.md
+++ b/courses/concise/05.md
@@ -1,8 +1,8 @@
 ---
 index: 5
-title: 5. Scope
+title: 5. Practice!
 author: Emily
 headerDepth: 3
 ---
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+Put ## 3. Avoid pronouns somewhere?
